swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/common/include/jhi.h

//------------------------------------------------------------
// Common & External Interfaces
//------------------------------------------------------------

typedef  PVOID   JHI_HANDLE ;
typedef  PVOID   JHI_SESSION_HANDLE;
// This is the format for a callback function that is used in order to 
// receive session events.
typedef void (*JHI_EventFunc)(JHI_SESSION_HANDLE SessionHandle, JHI_EVENT_DATA EventData);
// this struct contains information about the JHI service and the
// firmware versions, and additional info
typedef struct
{	
	char					jhi_version[VERSION_BUFFER_SIZE];		// the version of the JHI service
	char					fw_version[VERSION_BUFFER_SIZE];		// the version of the firmware		
	JHI_COMMUNICATION_TYPE	comm_type;								// the communication type between JHI and the firmware
	JHI_PLATFROM_ID			platform_id;							// the platform supported by the JHI service
	JHI_VM_TYPE             vm_type;								// the VM type supported by the JHI service
	UINT32					reserved[19];							// reserved bits
} JHI_VERSION_INFO;
// this struct contains information for a given session
typedef struct
{	
	JHI_SESSION_STATE		state;			// the session state
	UINT32					flags;			// the flags used when this session created
	UINT32					reserved[20];	// reserved bits
} JHI_SESSION_INFO;
//------------------------------------------------------------
// Data Buffer 
//------------------------------------------------------------
typedef struct
{	
	PVOID  buffer;
	UINT32 length ;
} DATA_BUFFER ;
//------------------------------------------------------------
// Function: JHI_CreateSession
//------------------------------------------------------------
JHI_EXPORT 
JHI_CreateSession (
	IN const JHI_HANDLE handle, 
	IN const char* AppId, 
	IN  UINT32 flags,
	IN DATA_BUFFER* initBuffer,
	OUT JHI_SESSION_HANDLE* pSessionHandle
);
//------------------------------------------------------------
// Function: JHI_GetSessionsCount
//------------------------------------------------------------
JHI_EXPORT 
JHI_GetSessionsCount(
	IN const JHI_HANDLE handle, 
	IN const char* AppId, 
	OUT UINT32* SessionsCount
);
//------------------------------------------------------------
// Function: JHI_CloseSession
//------------------------------------------------------------
JHI_EXPORT 
JHI_CloseSession(
	IN const JHI_HANDLE handle, 
	IN JHI_SESSION_HANDLE* pSessionHandle
);
//------------------------------------------------------------
// Function: JHI_ForceCloseSession
//------------------------------------------------------------
JHI_EXPORT
JHI_ForceCloseSession(
IN const JHI_HANDLE handle,
IN JHI_SESSION_HANDLE* pSessionHandle
);
//------------------------------------------------------------
// Function: JHI_GetSessionInfo
//------------------------------------------------------------
JHI_EXPORT 
JHI_GetSessionInfo(
	IN const JHI_HANDLE handle, 
	IN JHI_SESSION_HANDLE SessionHandle, 
	OUT JHI_SESSION_INFO* SessionInfo
);
//------------------------------------------------------------
// Function: JHI_RegisterEvent
//------------------------------------------------------------
JHI_EXPORT 
JHI_RegisterEvents(
	IN const JHI_HANDLE handle,
	IN JHI_SESSION_HANDLE SessionHandle,
	IN JHI_EventFunc pEventFunction);
 
//------------------------------------------------------------
// Function: JHI_UnRegisterEvent
//------------------------------------------------------------
JHI_EXPORT 
JHI_UnRegisterEvents(
	IN const JHI_HANDLE handle, 
	IN JHI_SESSION_HANDLE SessionHandle);
//------------------------------------------------------------
// Function: JHI_GetVersionInfo
//------------------------------------------------------------
JHI_EXPORT
JHI_GetVersionInfo (
   IN const JHI_HANDLE handle,
   OUT JHI_VERSION_INFO* pVersionInfo);