swarm/swarmdb/experimental/sgx/dynamic-application-loader-host-interface/bindings/csharp/JhiSharp/JhiWrapper.cs


        public static uint JHI_GetVersionInfo(IntPtr handle, ref JHI_I_VERSION_INFO VersionInfo)
        {
            if (is64BitProcess)
                return JHI_GetVersionInfo64(handle, ref VersionInfo);
            else
                return JHI_GetVersionInfo32(handle, ref VersionInfo);
        }

        [DllImport("jhi", EntryPoint = "JHI_GetVersionInfo", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_GetVersionInfo32(IntPtr handle, ref JHI_I_VERSION_INFO VersionInfo);

        [DllImport("jhi64", EntryPoint = "JHI_GetVersionInfo", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_GetVersionInfo64(IntPtr handle, ref JHI_I_VERSION_INFO VersionInfo);

        public static uint JHI_CreateSession(IntPtr handle, string AppId, UInt32 flags, ref DATA_BUFFER initBuffer, ref IntPtr SessionHandle)
        {
            if (is64BitProcess)
                return JHI_CreateSession64(handle, AppId, flags, ref initBuffer, ref SessionHandle);
            else
                return JHI_CreateSession32(handle, AppId, flags, ref initBuffer, ref SessionHandle);
        }

        [DllImport("jhi", EntryPoint = "JHI_CreateSession", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_CreateSession32(IntPtr handle, string AppId, UInt32 flags, ref DATA_BUFFER initBuffer, ref IntPtr SessionHandle);

        [DllImport("jhi64", EntryPoint = "JHI_CreateSession", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_CreateSession64(IntPtr handle, string AppId, UInt32 flags, ref DATA_BUFFER initBuffer, ref IntPtr SessionHandle);

        public static uint JHI_CloseSession(IntPtr handle, ref IntPtr SessionHandle)
        {
            if (is64BitProcess)
                return JHI_CloseSession64(handle, ref SessionHandle);
            else
                return JHI_CloseSession32(handle, ref SessionHandle);
        }

        [DllImport("jhi", EntryPoint = "JHI_CloseSession", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_CloseSession32(IntPtr handle, ref IntPtr SessionHandle);

        [DllImport("jhi64", EntryPoint = "JHI_CloseSession", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_CloseSession64(IntPtr handle, ref IntPtr SessionHandle);

        public static uint JHI_ForceCloseSession(IntPtr handle, ref IntPtr SessionHandle)
        {
            if (is64BitProcess)
                return JHI_ForceCloseSession64(handle, ref SessionHandle);
            else
                return JHI_ForceCloseSession32(handle, ref SessionHandle);
        }

        [DllImport("jhi", EntryPoint = "JHI_ForceCloseSession", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_ForceCloseSession32(IntPtr handle, ref IntPtr SessionHandle);
        [DllImport("jhi64", EntryPoint = "JHI_ForceCloseSession", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_ForceCloseSession64(IntPtr handle, ref IntPtr SessionHandle);
       
        public static uint JHI_GetSessionsCount(IntPtr handle, string AppId, ref UInt32 SessionsCount)
        {
            if (is64BitProcess)
                return JHI_GetSessionsCount64(handle, AppId, ref SessionsCount);
            else
                return JHI_GetSessionsCount32(handle, AppId, ref SessionsCount);
        }

        [DllImport("jhi", EntryPoint = "JHI_GetSessionsCount", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_GetSessionsCount32(IntPtr handle, string AppId, ref UInt32 SessionsCount);

        [DllImport("jhi64", EntryPoint = "JHI_GetSessionsCount", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_GetSessionsCount64(IntPtr handle, string AppId, ref UInt32 SessionsCount);

        public static uint JHI_GetSessionInfo(IntPtr handle, IntPtr SessionHandle, ref JHI_I_SESSION_INFO SessionInfo)
        {
            if (is64BitProcess)
                return JHI_GetSessionInfo64(handle, SessionHandle, ref SessionInfo);
            else
                return JHI_GetSessionInfo32(handle, SessionHandle, ref SessionInfo);
        }

        [DllImport("jhi", EntryPoint = "JHI_GetSessionInfo", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_GetSessionInfo32(IntPtr handle, IntPtr SessionHandle, ref JHI_I_SESSION_INFO SessionInfo);

        [DllImport("jhi64", EntryPoint = "JHI_GetSessionInfo", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_GetSessionInfo64(IntPtr handle, IntPtr SessionHandle, ref JHI_I_SESSION_INFO SessionInfo);

        public static uint JHI_RegisterEvents(IntPtr handle, IntPtr SessionHandle, [In, MarshalAs(UnmanagedType.FunctionPtr)] JHI_I_CallbackFunc EventFunction)
        {
            if (is64BitProcess)
                return JHI_RegisterEvents64(handle, SessionHandle, EventFunction);
            else
                return JHI_RegisterEvents32(handle, SessionHandle, EventFunction);
        }

        [DllImport("jhi", EntryPoint = "JHI_RegisterEvents", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_RegisterEvents32(IntPtr handle, IntPtr SessionHandle, [In, MarshalAs(UnmanagedType.FunctionPtr)] JHI_I_CallbackFunc EventFunction);

        [DllImport("jhi64", EntryPoint = "JHI_RegisterEvents", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_RegisterEvents64(IntPtr handle, IntPtr SessionHandle, [In, MarshalAs(UnmanagedType.FunctionPtr)] JHI_I_CallbackFunc EventFunction);

        public static uint JHI_UnRegisterEvents(IntPtr handle, IntPtr SessionHandle)
        {
            if (is64BitProcess)
                return JHI_UnRegisterEvents64(handle, SessionHandle);
            else
                return JHI_UnRegisterEvents32(handle, SessionHandle);
        }

        [DllImport("jhi", EntryPoint = "JHI_UnRegisterEvents", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_UnRegisterEvents32(IntPtr handle, IntPtr SessionHandle);

        [DllImport("jhi64", EntryPoint = "JHI_UnRegisterEvents", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint JHI_UnRegisterEvents64(IntPtr handle, IntPtr SessionHandle);

        // JHI GEN2 functions:
        public static uint TEE_ListInstalledTAs(IntPtr handle, ref UUID_LIST appIdStrs)
        {
            return is64BitProcess
                       ? TEE_ListInstalledTAs64(handle, ref appIdStrs)
                       : TEE_ListInstalledTAs32(handle, ref appIdStrs);
        }

        [DllImport("TeeManagement", EntryPoint = "TEE_ListInstalledTAs", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint TEE_ListInstalledTAs32(IntPtr handle, [MarshalAs(UnmanagedType.Struct) ] ref UUID_LIST appIdStrs);
        [DllImport("TeeManagement64", EntryPoint = "TEE_ListInstalledTAs", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint TEE_ListInstalledTAs64(IntPtr handle, [MarshalAs(UnmanagedType.Struct)] ref UUID_LIST appIdStrs);
        
        public static uint TEE_OpenSDSession(string sdId, out IntPtr sdHandle)
        {
            return is64BitProcess ? TEE_OpenSDSession64(sdId, out sdHandle) : TEE_OpenSDSession32(sdId, out sdHandle);
        }

        [DllImport("TeeManagement", EntryPoint = "TEE_OpenSDSession", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint TEE_OpenSDSession32(string sdId, out IntPtr sdHandle);
        [DllImport("TeeManagement64", EntryPoint = "TEE_OpenSDSession", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint TEE_OpenSDSession64(string sdId, out IntPtr sdHandle);

        public static uint TEE_CloseSDSession(ref IntPtr sdHandle)
        {           
            return is64BitProcess ? TEE_CloseSDSession64(ref sdHandle) : TEE_CloseSDSession32(ref sdHandle);
        }

        [DllImport("TeeManagement", EntryPoint = "TEE_CloseSDSession", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint TEE_CloseSDSession32(ref IntPtr sdHandle);
        [DllImport("TeeManagement64", EntryPoint = "TEE_CloseSDSession", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint TEE_CloseSDSession64(ref IntPtr sdHandle);

        public static uint TEE_SendAdminCmdPkg(IntPtr handle, IntPtr package, int length)
        {
            return is64BitProcess ? TEE_SendAdminCmdPkg64(handle, package, length) : TEE_SendAdminCmdPkg32(handle, package, length);
        }

        [DllImport("TeeManagement", EntryPoint = "TEE_SendAdminCmdPkg", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint TEE_SendAdminCmdPkg32(IntPtr handle, IntPtr package, int length);
        [DllImport("TeeManagement64", EntryPoint = "TEE_SendAdminCmdPkg", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint TEE_SendAdminCmdPkg64(IntPtr handle, IntPtr package, int length);
        
        public static uint JHI_TEE_SendAdminCmd(byte[] bytes)
        {
            uint result = 0;

            IntPtr sdHandle;
            uint res = TEE_OpenSDSession(INTEL_SD_UUID, out sdHandle);

            if (res != 0)
                return res;
            
            bytes = bytes ?? new byte[0];

            int numBytes = bytes.Length;
            IntPtr pBytes = Marshal.AllocHGlobal(numBytes);
            Marshal.Copy(bytes, 0, pBytes, numBytes);
            res = TEE_SendAdminCmdPkg(sdHandle, pBytes, numBytes);
            Marshal.FreeHGlobal(pBytes);

            if (res != 0)
                result = res;

            res = TEE_CloseSDSession(ref sdHandle);

            if (res != 0)
                result = res;

            return result;
        }
        // JHI GEN2 functions:
        public static uint TEE_QueryTEEMetadata(IntPtr handle, ref DAL_TEE_METADATA dalMetaData)
        {
            return is64BitProcess
                       ? TEE_QueryTEEMetadata64(handle, ref dalMetaData)
                       : TEE_QueryTEEMetadata32(handle, ref dalMetaData);
        }

        [DllImport("TeeManagement", EntryPoint = "TEE_QueryTEEMetadata", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint TEE_QueryTEEMetadata32(IntPtr handle, [MarshalAs(UnmanagedType.Struct)] ref DAL_TEE_METADATA dalMetaData);
        [DllImport("TeeManagement64", EntryPoint = "TEE_QueryTEEMetadata", CallingConvention = CallingConvention.Cdecl)]
        private static extern uint TEE_QueryTEEMetadata64(IntPtr handle, [MarshalAs(UnmanagedType.Struct)] ref DAL_TEE_METADATA dalMetaData);
        
    }
}

// Restore missing documentation warnings
#pragma warning restore 1591
